tests/snapshots/integration__integration_tests__list__list_global_not_configured.snap
---
source: tests/integration_tests/list.rs
assertion_line: 124
info:
  program: wt
  args:
    - list
    - "--global"
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    GIT_TERMINAL_PROMPT: "0"
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    PATH: "[PATH]"
    RUST_LOG: warn
    SOURCE_DATE_EPOCH: "1735776000"
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
[2m[a][22m Multiline error without context: global-worktree-dir is not configured. Add it to your config:
  [CONFIG_PATH]:
  global-worktree-dir = "[PROJECT_ID]"
[31m✗[39m [31mCommand failed[39m
[107m [0m global-worktree-dir is not configured. Add it to your config:
[107m [0m 
[107m [0m   [user config path]/config.toml:
[107m [0m   global-worktree-dir = "[PROJECT_ID]"
